contrast issue fix, small bugs fixes, dom layout fixes

--- a/src/components/Disclaimer/disclaimer.css
+++ b/src/components/Disclaimer/disclaimer.css
@@ -1,8 +1,4 @@
 .disclaimer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   margin: 5rem 40rem;
   padding: 2rem;
 
@@ -23,5 +19,9 @@
 
   p {
     margin: 0.75rem 0;
+  }
+
+  h1 {
+    margin: 0;
   }
 }
