--- a/src/variables.css
+++ b/src/variables.css
@@ -2,7 +2,7 @@
   --blue: #007d9c;
   --blue2: #035b71;
   --dark-blue: #253443;
-  --white: rgba(255, 255, 255, 0.95);
+  --white: rgba(255, 255, 255);
   --blue-gray: rgba(37, 52, 67, 0.51);
   --gray: #78787e;
   --yellow: rgb(250, 250, 126);
